--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,26 +1,31 @@
 name: SonarQube Scan
- 
+
 on:
   push:
     branches:
       - main
- 
+
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
- 
+
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '11'
- 
+
       - name: Build and Test
         run: mvn clean install
- 
+
       - name: SonarQube Scan
-        run: mvn sonar:sonar -Dsonar.login=sqa_e6ee38550ddd1bde24188e0893ce94c2cf4efa7b -Dsonar.host.url=http://localhost:9009/ -Dsonar.projectKey=Test -Dsonar.projectName="Test"
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }} \
+            -Dsonar.host.url=http://localhost:9009/ \
+            -Dsonar.projectKey=Test \
+            -Dsonar.projectName="Test"
